data/derived/comb/progs/unify/prog5183.ml.out
Characters 31-48:
  let stringOfList f l = List.map(sepConcat, "" l);;
                                 ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'd
